# src/routes/v1/auth.js
@@ -2,9 +2,10 @@ import { Router } from 'express';
 import { AuthMiddleware } from '../../middlewares';
 import { AuthController } from '../../controllers';
 
-const { signup, signin } = AuthController;
+const { signup, signin, logout } = AuthController;
 const {
   validate,
+  authenticate,
   checkEmailAlreadyExists,
   validateLoginFields,
   verifyIfExistingUser
@@ -14,5 +15,6 @@ const router = Router();
 
 router.post('/signup', validate, checkEmailAlreadyExists, signup);
 router.post('/signin', validateLoginFields, verifyIfExistingUser, signin);
+router.get('/logout', authenticate, logout);
 
 export default router;
